add Swagger favorite and fix some controllers
